adjust weather panes

--- a/weather.html
+++ b/weather.html
@@ -4,46 +4,45 @@ title: Weather
 permalink: /weather
 ---
 
+<!-- from https://weather.com/maps/currentusweather -->
+
 <div class="row">
   <div class="col-sm-6">
-  <img width=440 height=297 src="http://image.weather.com/web/radar/us_sfo_ultraradar_medium_usen.jpg">
+    <div class="row">
+      <img width=440 height=297 src="https://s.w-x.co/web/radar/us_sfo_ultraradar_medium_usen.jpg">
+    </div>
+    <div class="row">
+      <img width=440 height=297 src="https://s.w-x.co/images/maps/current/cur_w_440x297.jpg">
+    </div>
+    <div class="row">
+      <img width=440 height=297 src="https://s.w-x.co/images/maps/forecast/wcen_precfcst_440x297.jpg">
+    </div>
   </div>
   <div class="col-sm-6">
-  <img width=440 height=297 src="http://image.weather.com/images/maps/forecast/map_wkpln_day1_3uswc_enus_440x297.jpg">
+    <div class="row">
+      <img width=440 height=297 src="https://s.w-x.co/images/maps/forecast/map_wkpln_day1_3uswc_enus_440x297.jpg">
+    </div>
+    <div class="row">
+      <img width=440 height=297 src="https://s.w-x.co/images/maps/forecast/map_wkpln_day2_3uswc_enus_440x297.jpg">
+    </div>
+    <div class="row">
+      <img width=440 height=297 src="https://s.w-x.co/images/maps/forecast/map_wkpln_day3_3uswc_enus_440x297.jpg">
+    </div>
+    <div class="row">
+      <img width=440 height=297 src="https://s.w-x.co/images/maps/forecast/map_wkpln_day4_3uswc_enus_440x297.jpg">
+    </div>
   </div>
 </div>
 
 <div class="row">
   <div class="col-sm-6">
-  <img width=440 height=297 src="http://image.weather.com/images/maps/current/cur_w_720x486.jpg">
+    <div class="row">
+      <img width=440 height=297 src="https://s.w-x.co/images/maps/aviation/avifr_440x297.jpg">
+    </div>
   </div>
   <div class="col-sm-6">
-  <img width=440 height=297 src="http://image.weather.com/images/maps/forecast/map_wkpln_day2_3uswc_enus_440x297.jpg">
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-6">
-  <img width=440 height=297 src="http://image.weather.com/images/maps/forecast/wcen_precfcst_600x405.jpg">
-  </div>
-  <div class="col-sm-6">
-  <img width=440 height=297 src="http://image.weather.com/images/maps/forecast/map_wkpln_day3_3uswc_enus_440x297.jpg">
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-6">
-  </div>
-  <div class="col-sm-6">
-  <img width=440 height=297 src="http://image.weather.com/images/maps/forecast/map_wkpln_day4_3uswc_enus_440x297.jpg">
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-6">
-  <img width=440 height=297 src="http://image.weather.com/images/sat/regions/west_cen_sat_720x486.jpg">
-  </div>
-  <div class="col-sm-6">
-  <img width=440 height=297 src="http://image.weather.com/images/maps/aviation/avifr_720x486.jpg">
+    <div class="row">
+      <img width=440 height=297 src="https://i.imwx.com/images/sat/regions/west_cen_sat_440x297.jpg">
+    </div>
   </div>
 </div>
